Feature: created basic structure for further developement and expanding functionality

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
-bin/
-obj/
-/packages/
-riderModule.iml
-/_ReSharper.Caches/
+## Build results
+[Bb]in/
+[Oo]bj/
+
+## User-specific files
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+## Rider / JetBrains
+.idea/
+*.sln.iml
+
+## OS specific
+.DS_Store
+Thumbs.db
