--- a/src/SmartRecruiter.Application/SmartRecruiter.Application.csproj
+++ b/src/SmartRecruiter.Application/SmartRecruiter.Application.csproj
@@ -6,4 +6,12 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\SmartRecruiter.Domain\SmartRecruiter.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="FluentValidation" Version="12.1.1" />
+    </ItemGroup>
+
 </Project>
