--- a/src/SmartRecruiter.Infrastructure/SmartRecruiter.Infrastructure.csproj
+++ b/src/SmartRecruiter.Infrastructure/SmartRecruiter.Infrastructure.csproj
@@ -6,4 +6,17 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Services\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\SmartRecruiter.Application\SmartRecruiter.Application.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.23" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.23" />
+    </ItemGroup>
+
 </Project>
