--- a/src/SmartRecruiter.Infrastructure/SmartRecruiter.Infrastructure.csproj
+++ b/src/SmartRecruiter.Infrastructure/SmartRecruiter.Infrastructure.csproj
@@ -7,16 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Services\" />
-    </ItemGroup>
-
-    <ItemGroup>
       <ProjectReference Include="..\SmartRecruiter.Application\SmartRecruiter.Application.csproj" />
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.23" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.23" />
+      <PackageReference Include="PdfPig" Version="0.1.14-alpha-20260211-d6e86" />
     </ItemGroup>
 
 </Project>
