--- a/src/SmartRecruiter.API/appsettings.json
+++ b/src/SmartRecruiter.API/appsettings.json
@@ -7,6 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=SmartRecruiterDb;User Id=sa;Password=StrongPassword123!;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost,1433;Database=SmartRecruiterDb;User Id=sa;Password=StrongPassword123!;TrustServerCertificate=True;",
+    "AzureStorage": "UseDevelopmentStorage=true"
+  },
+  "AzureStorage": {
+    "ContainerName": "resumes"
   }
 }
