--- a/src/SmartRecruiter.Infrastructure/SmartRecruiter.Infrastructure.csproj
+++ b/src/SmartRecruiter.Infrastructure/SmartRecruiter.Infrastructure.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Azure.Storage.Blobs" Version="12.27.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.23" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.23" />
       <PackageReference Include="PdfPig" Version="0.1.14-alpha-20260211-d6e86" />
