--- a/src/SmartRecruiter.API/SmartRecruiter.API.csproj
+++ b/src/SmartRecruiter.API/SmartRecruiter.API.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.1" />
         <PackageReference Include="MailKit" Version="4.14.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.23" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.23">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
