Feature: added global exception hanlder, started up jwt auth base

--- a/src/SmartRecruiter.API/appsettings.json
+++ b/src/SmartRecruiter.API/appsettings.json
@@ -12,5 +12,10 @@
   },
   "AzureStorage": {
     "ContainerName": "resumes"
+  },
+  "Jwt":{
+    "Issuer": "SmartRecruiterAPI",
+    "Audience": "SmartRecruiterClient"
+    "Key": "b0dac8d8f00fa65fa642b5f17643c189"
   }
 }
