feat: implement JWT authentication with Identity, custom DTOs, and global 401 handling

--- a/src/SmartRecruiter.API/appsettings.json
+++ b/src/SmartRecruiter.API/appsettings.json
@@ -15,7 +15,7 @@
   },
   "Jwt":{
     "Issuer": "SmartRecruiterAPI",
-    "Audience": "SmartRecruiterClient"
+    "Audience": "SmartRecruiterClient",
     "Key": "b0dac8d8f00fa65fa642b5f17643c189"
   }
 }
